plex to jellyfin

--- a/media-docker-compose.yaml
+++ b/media-docker-compose.yaml
@@ -3,33 +3,51 @@ version: "3.8"
 
 services:
 
-  plex:
-    image: lscr.io/linuxserver/plex:latest
-    container_name: plex
-    networks:
-      - backend
-      - media
-    ports:
-      - 32400:32400/tcp
-      - 3005:3005/tcp
-      - 8324:8324/tcp
-      - 32469:32469/tcp
-      - 1900:1900/udp
-      - 32410:32410/udp
-      - 32412:32412/udp
-      - 32413:32413/udp
-      - 32414:32414/udp
+  jellyfin:
+    image: lscr.io/linuxserver/jellyfin:latest
+    container_name: jellyfin
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
-      - VERSION=docker
-      - PLEX_CLAIM=claim-yP9zBnziE3zfeYuZV3ca
+      - JELLYFIN_PublishedServerUrl=jellyfin.casa.tomasgalvao.me #optional
     volumes:
-      - Plex_Metadata:/config
-      - Plex_Media:/media
-
+      - Metadata:/config
+      - Media:/media
+    ports:
+      - 8096:8096
+      - 8920:8920 #optional
+      - 7359:7359/udp #optional
+      - 1900:1900/udp #optional
     restart: unless-stopped
+
+#  plex:
+#    image: lscr.io/linuxserver/plex:latest
+#    container_name: plex
+#    networks:
+#      - backend
+#      - media
+#    ports:
+#      - 32400:32400/tcp
+#      - 3005:3005/tcp
+#      - 8324:8324/tcp
+#      - 32469:32469/tcp
+#      - 1900:1900/udp
+#      - 32410:32410/udp
+#      - 32412:32412/udp
+#      - 32413:32413/udp
+#      - 32414:32414/udp
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - TZ=Etc/UTC
+#      - VERSION=docker
+#      - PLEX_CLAIM=claim-yP9zBnziE3zfeYuZV3ca
+#    volumes:
+#      - Plex_Metadata:/config
+#      - Plex_Media:/media
+#
+#    restart: unless-stopped
 
   sonarr:
     image: lscr.io/linuxserver/sonarr:develop
@@ -119,15 +137,15 @@ volumes:
       o: 	addr=192.168.0.6,rw,nfsvers=4
       device: :/mnt/user/data
     
-  Plex_Metadata:
+  Metadata:
     name: Plex_Metadata
     driver_opts:
       type: nfs
       o: 	addr=192.168.0.6,rw,nfsvers=4
-      device: :/mnt/user/plex_metadata
+      device: :/mnt/user/media_metadata
     
-  Plex_Media:
-    name: Plex_Media
+  Media:
+    name: Media
     driver_opts:
       type: nfs
       o: 	addr=192.168.0.6,rw,nfsvers=4
