--- a/home-docker-compose.yaml
+++ b/home-docker-compose.yaml
@@ -2,6 +2,7 @@
 version: "3.8"
 
 services:
+
   adguardhome-sync:
     image: ghcr.io/bakito/adguardhome-sync
     container_name: adguardhome-sync
@@ -41,6 +42,34 @@ services:
       - /opt/appdata/Nginx-Proxy-Manager/data:/data
       - /opt/appdata/Nginx-Proxy-Manager/letsencrypt:/etc/letsencrypt
 
+  syncthing:
+    image: lscr.io/linuxserver/syncthing:latest
+    container_name: syncthing
+    hostname: syncthing #optional
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+    volumes:
+      - /opt/appdata/Syncthing/config:/config
+      - Syncthing:/data
+    networks: 
+      - frontend
+      - backend
+    ports:
+      - 22000:22000/tcp
+      - 22000:22000/udp
+      - 21027:21027/udp
+    restart: unless-stopped
+
+volumes:
+  Syncthing:
+    name: Syncthing
+    driver_opts:
+      type: nfs
+      o: 	addr=192.168.0.6,rw,nfsvers=4
+      device: :/mnt/user/syncthing
+    
 networks:
     frontend:
       name: frontend
