--- a/media-docker-compose.yaml
+++ b/media-docker-compose.yaml
@@ -106,7 +106,7 @@ services:
       - PGID=1000
       - TZ=Etc/UTC
       - WEBUI_PORT=8080
-      - DOCKER_MODS=marzzzello/linuxserver-io-mod-qbit-matui
+      - DOCKER_MODS=marzzzello/linuxserver-io-mod-qbit-matui|arafatamim/linuxserver-io-mod-vuetorrent
     volumes:
       - /opt/appdata/qbittorrent:/config
       - Downloads_Torrent:/data/Downloads/Torrent/
