--- a/media-docker-compose.yaml
+++ b/media-docker-compose.yaml
@@ -19,6 +19,8 @@ services:
       - 8920:8920 #optional
       - 7359:7359/udp #optional
       - 1900:1900/udp #optional
+    devices:
+      - /dev/dri:/dev/dri
     restart: unless-stopped
 
 #  plex:
