--- a/home-docker-compose.yaml
+++ b/home-docker-compose.yaml
@@ -23,6 +23,7 @@ services:
       - /opt/appdata/homepage/config:/app/config
       - /opt/appdata/homepage/icons:/app/public/icons
       - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
 
 
   npm:
