--- a/home-docker-compose.yaml
+++ b/home-docker-compose.yaml
@@ -16,6 +16,8 @@ services:
   homepage:
     image: ghcr.io/gethomepage/homepage:latest
     container_name: homepage
+    dns:
+      - 192.168.0.251 #change this
     networks:
       - backend
       - frontend
